--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>PRDEL</h1>
 <h2>NEGR</h2>
-<a href="www.google.com" target="_blank">google</a>
+<a href="https://www.google.com" target="_blank">google</a>
